# coppeliaSimLib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clangFormat.py  clangTidy.py  config.pri  coppeliaSimLib.pri  coppeliaSimLib.pro  iconFiles.qrc  imageFiles.qrc  imageFiles_vrep.qrc  license.txt  makefile_noGui_noGl  targaFiles.qrc  toolbarFiles.qrc  v_rep.pri  v_rep.pro  variousImageFiles.qrc
qdarkstyle/: style.qss
sourceCode/3dObjects/: camera.cpp  camera.h  dummy.cpp  dummy.h  forceSensor.cpp  forceSensor.h  graph.cpp  graph.h  jointObject.cpp  jointObject.h  light.cpp  light.h  mill.cpp  mill.h  mirror.cpp  mirror.h  octree.cpp  octree.h  path.cpp  path.h  pointCloud.cpp  pointCloud.h  proximitySensor.cpp  proximitySensor.h  shape.cpp  shape.h  visionSensor.cpp  visionSensor.h
sourceCode/collections/: collection.cpp  collection.h  collectionElement.cpp  collectionElement.h  regCollection.cpp  regCollection.h  regCollectionEl.cpp  regCollectionEl.h
sourceCode/collisions/: collisionObject.cpp  collisionObject.h  collisionRoutine.cpp  collisionRoutine.h  collisionRoutines.cpp  collisionRoutines.h  regCollision.cpp  regCollision.h
sourceCode/customUserInterfaces/: buttonBlock.cpp  buttonBlock.h  softButton.cpp  softButton.h
sourceCode/displ/: colorObject.cpp  colorObject.h
sourceCode/distances/: distanceObject.cpp  distanceObject.h  distanceRoutine.cpp  distanceRoutine.h  distanceRoutines.cpp  distanceRoutines.h  regDist.cpp  regDist.h  statDistObj.cpp  statDistObj.h
sourceCode/drawingObjects/: bannerObject.cpp  bannerObject.h  drawingContainer2D.cpp  drawingContainer2D.h  drawingObject.cpp  drawingObject.h  drawingObject2D.cpp  drawingObject2D.h  ptCloud_old.cpp  ptCloud_old.h
sourceCode/geometricAlgorithms/: algos.cpp  algos.h  edgeElement.cpp  edgeElement.h  linMotionRoutines.cpp  linMotionRoutines.h  meshManip.cpp  meshManip.h  meshRoutines.cpp  meshRoutines.h
sourceCode/interfaces/: dummyClasses.h  gm.cpp  gm.h  libLic.cpp  libLic.h  luaScriptFunctions.cpp  luaScriptFunctions.h  methods.cpp  methods.h  pathPlanningInterface.cpp  pathPlanningInterface.h  sim-old.cpp  sim-old.h  sim.cpp  sim.h  simFlavor.cpp  simFlavor.h  simInternal-old.cpp  simInternal-old.h  simInternal.cpp  simInternal.h  v_rep.cpp  v_rep.h  v_rep_internal.cpp  v_rep_internal.h
sourceCode/kinematics/: ikElement.cpp  ikElement.h  ikGroup.cpp  ikGroup.h  ikRoutines.cpp  ikRoutines.h
sourceCode/libsAndPlugins/: pluginContainer.cpp  pluginContainer.h  pluginContainer.h~RFc64227e8.TMP
sourceCode/luaScripting/: luaScriptObject.cpp  luaScriptObject.h  luaScriptParameters.cpp  luaScriptParameters.h  luaWrapper.cpp  luaWrapper.h  outsideCommandQueueForScript.cpp  outsideCommandQueueForScript.h  userParameters.cpp  userParameters.h
sourceCode/mainContainers/: mainContainer.cpp  mainContainer.h  scene.cpp  scene.h  sceneContainer.cpp  sceneContainer.h  world.cpp  world.h  worldContainer.cpp  worldContainer.h
sourceCode/menusAndSimilar/: addOperations.cpp  addOperations.h  fileOperations.cpp  fileOperations.h  moduleMenuItem.cpp  moduleMenuItem.h  moduleMenuItemContainer.cpp  moduleMenuItemContainer.h
sourceCode/motionPlanning_old/: motionPlanningTask_old.cpp  motionPlanningTask_old.h
sourceCode/pagesAndViews/: pageContainer.cpp  pageContainer.h  sPage.cpp  sPage.h  sView.cpp  sView.h
sourceCode/pathPlanning_old/: pathPlanningTask_old.cpp  pathPlanningTask_old.h
sourceCode/platform/: vArchive.cpp  vArchive.h  vDateTime.cpp  vDateTime.h  vFile.cpp  vFile.h  vFileFinder.cpp  vFileFinder.h  vMutex.cpp  vMutex.h  vSimUiMutex.cpp  vSimUiMutex.h  vThread.cpp  vThread.h  vVarious.cpp  vVarious.h  wThread.cpp  wThread.h
sourceCode/rendering/: bannerRendering.cpp  bannerRendering.h  broadcastDataVisualRendering.cpp  broadcastDataVisualRendering.h  cameraRendering.cpp  cameraRendering.h  collisionContourRendering.cpp  collisionContourRendering.h  distanceRendering.cpp  distanceRendering.h  drawingObject2DRendering.cpp  drawingObject2DRendering.h  drawingObjectRendering.cpp  drawingObjectRendering.h  dummyRendering.cpp  dummyRendering.h  dynamicsRendering.cpp  dynamicsRendering.h  environmentRendering.cpp  environmentRendering.h  forceSensorRendering.cpp  forceSensorRendering.h  ghostRendering.cpp  ghostRendering.h  graphRendering.cpp  graphRendering.h  jointRendering.cpp  jointRendering.h  lightRendering.cpp  lightRendering.h  millRendering.cpp  millRendering.h  mirrorRendering.cpp  mirrorRendering.h  motionPlanningTaskRendering_old.cpp  motionPlanningTaskRendering_old.h  (+24 more)
targaFiles/: 128x128folder.tga  2delement.tga  camera.tga  checkedbgd.tga  clipplane.tga  convexm.tga  convexs.tga  cur_alldir.tga  cur_arrow.tga  cur_backslash.tga  cur_ctrl.tga  cur_finger.tga  cur_horizdir.tga  cur_leftbutt.tga  cur_middlebutt.tga  cur_nobutt.tga  cur_rightbutt.tga  cur_shift.tga  cur_slash.tga  cur_vertdir.tga  cur_wheel.tga  customSceneObject.tga  customizationScript.tga  customizationScriptDisabled.tga  customizationScriptError.tga  d_lighta.tga  d_lighti.tga  dummy.tga  dynamics.tga  edge.tga  eduWatermark.tga  eduWatermarku.tga  evalWaterMark.tga  folder.tga  ftsensor.tga  graph.tga  h_shape.tga  liteWatermark.tga  m_shape.tga  marker.tga  (+36 more)
ui/: qdlg2d3dgraphproperties.ui  qdlgabout.ui  qdlgaddgraphcurve.ui  qdlgassembly.ui  qdlgavirecorder.ui  qdlgcalcdialogcontainer.ui  qdlgcalcdialogcontainer_OLD.ui  qdlgcameras.ui  qdlgcollections.ui  qdlgcollisions.ui  qdlgcolor.ui  qdlgcolorpulsation.ui  qdlgcommonproperties.ui  qdlgconstraintsolver.ui  qdlgconvexdecomposition.ui  qdlgcustomsceneobjects.ui  qdlgdatastreamselection.ui  qdlgdependencyequation.ui  qdlgdetectableproperties.ui  qdlgdetectionvolume.ui  qdlgdistances.ui  qdlgdummies.ui  qdlgdynamics.ui  qdlgedgeedit.ui  qdlgentityvsentityselection.ui  qdlgenvironment.ui  qdlgfilters.ui  qdlgfog.ui  qdlgforcesensors.ui  qdlggeometry.ui  qdlggraphs.ui  qdlgheightfielddimension.ui  qdlgik.ui  qdlgikavoidance.ui  qdlgikconditional.ui  qdlgikelements.ui  qdlgimagecolor.ui  qdlginertiatensor.ui  qdlginsertscript.ui  qdlginteractiveik.ui  (+82 more)
(+1139 files in other folders)
